src/test/contracts/negative/interpreter_tests/test_run_types.jsligo
const foo = (x: {field: int}): {field: int} => {return x};
const bar = Test.run_exn(foo, {property: "toto"});

